<resources>

    <string name="app_name">Do Not Disturb</string>
    <string name="menu_settings">Settings</string>
    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>
    <string name="pref_title_mode">Do Not Disturb</string>
    <string name="pref_title_scheduled">Scheduled</string>
    <string name="pref_summary_scheduled">Between time</string>
    <string name="pref_title_from">From</string>
    <string name="pref_title_to">To</string>
    <string name="pref_title_allow_calls_from">Allow Calls From</string>
</resources>